<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Musify</string>
    <string name="song_title">Song</string>
    <string name="artist_name">Artist</string>
    <string name="album_art" />
    <string name="app_theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="_00_00">00:00</string>
    <string name="search_settings">Search settings…</string>
    <string name="follow_system_theme">Follow system theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="display">Display</string>
    <string name="sound">Sound</string>
    <string name="about">About</string>
    <string name="accent">Accent</string>
    <string name="material_design">Material Design</string>
    <string name="self_defined">Self-defined</string>
    <string name="normal">None</string>
    <string name="media_files_permissions">Musify needs access to your media and files to locate, manage, and play your music. Without these permissions, some features may not work properly.</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="cancel">Cancel</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="please_grant_the_necessary_permissions_to_continue_using_the_app">Please grant the necessary permissions to continue using the app.</string>
    <string name="exit">Exit</string>
    <string name="exit_musify">Exit Musify?</string>
    <string name="exit_confirmation">Are you sure you want to exit Musify? You can exit to close and end all activity or run in background for music playback and notification background running.</string>
    <string name="search_music">Search music…</string>
    <string name="musify_is_a_feature_rich_next_generation_music_player_crafted_for_music_lovers_who_crave_more_from_their_listening_experience_available_on_android_with_ios_and_windows_versions_coming_soon_musify_transforms_your_device_into_a_high_fidelity_audio_hub_putting_your_music_library_front_and_center_whether_you_re_a_casual_listener_a_passionate_audiophile_or_somewhere_in_between_musify_delivers_a_sleek_powerful_and_personalized_musical_journey">Musify is a feature-rich, next-generation music player crafted for music lovers who crave more from their listening experience. Available on Android (with iOS and Windows versions coming soon), Musify transforms your device into a high-fidelity audio hub — putting your music library front and center. Whether you\'re a casual listener, a passionate audiophile, or somewhere in between, Musify delivers a sleek, powerful, and personalized musical journey.</string>
    <string name="a_next_generation_music_experience">A Next-Generation Music Experience</string>
    <string name="musify_banner">Musify Banner</string>
    <string name="musify_is_not_officially_release_some_features_may_still_be_under_development">Musify is not officially release. Some features may still be under development.</string>
    <string name="smart_playlists_n_10_band_equalizer_presets_n_advanced_audio_effects_n_lyrics_metadata_n_offline_first_n_dark_mode_themes_n_notification_controls_n_crossfade_gapless_playback"><![CDATA[- Smart Playlists\n- 10-Band Equalizer & Presets\n- Advanced Audio Effects\n- Lyrics & Metadata\n- Offline-First\n- Dark Mode & Themes\n- Notification Controls\n- Crossfade & Gapless Playback]]></string>
    <string name="core_features">Core Features</string>
    <string name="_2025_xoeris_all_rights_reserved">© 2025 Xoeris. All rights reserved.</string>
    <string name="experience_music_the_way_it_was_meant_to_be_heard_with_musify_you_re_not_just_listening_you_re_feeling_every_note">Experience music the way it was meant to be heard. With Musify, you\'re not just listening... you\'re feeling every note.</string>
</resources>