<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_rounded_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_music_note"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions_required"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_files_permissions"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_permissions"
        android:backgroundTint="@color/green_75"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/red_75"
        android:textColor="@color/white" />
</LinearLayout>
