<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_rounded_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_music_note"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_musify"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_confirmation"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rp_rounded_ripple_drawable"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rp_rounded_ripple_drawable"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/red_75"
        app:cardCornerRadius="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_run_in_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rp_rounded_ripple_drawable"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="Run in background"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>
