<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_layout"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/frame_layout"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_fab"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/custom_fab"
        android:background="@drawable/bg_rounded_fab_background"
        android:padding="@dimen/spacing_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/top_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/album_icon"
                android:background="@drawable/bg_rounded_album_ripple"
                android:layout_width="@dimen/album_art_size"
                android:layout_height="@dimen/album_art_size"
                android:layout_margin="@dimen/spacing_small"
                android:src="@drawable/ic_album"
                android:scaleType="centerCrop"
                android:contentDescription="@string/album_art"
                android:tint="@color/white"
                android:clipToOutline="true"/>

            <ImageView
                android:id="@+id/skip_previous_icon"
                android:src="@drawable/ic_skip_previous"
                android:layout_width="@dimen/control_icon_size"
                android:layout_height="@dimen/control_icon_size"
                android:layout_margin="@dimen/spacing_xsmall"
                style="@style/PlayerControlIcon"/>
            <ImageView
                android:id="@+id/play_pause_icon"
                android:src="@drawable/ic_play_arrow"
                android:layout_width="@dimen/control_icon_size"
                android:layout_height="@dimen/control_icon_size"
                android:layout_margin="@dimen/spacing_xsmall"
                style="@style/PlayerControlIcon"/>
            <ImageView
                android:id="@+id/skip_next_icon"
                android:src="@drawable/ic_skip_next"
                android:layout_width="@dimen/control_icon_size"
                android:layout_height="@dimen/control_icon_size"
                android:layout_margin="@dimen/spacing_xsmall"
                style="@style/PlayerControlIcon"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/bottom_fab_layout"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:id="@+id/song_title"
                        android:padding="16dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/song_title"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:id="@+id/song_artist"
                        android:padding="16dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_name"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"/>
                </LinearLayout>
            </LinearLayout>
            <com.xoeris.android.xesc.system.core.module.media.ui.VortexSlider
                android:id="@+id/vortexSlider"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:progressColor="@color/white"
                app:thumbColor="@color/white"
                app:thumbRadius="8dp"
                app:trackColor="@color/ripple"
                app:trackHeight="8dp"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/song_current_duration"
                    android:text="@string/_00_00"
                    android:layout_marginEnd="50dp"
                    style="@style/DurationText"/>
                <TextView
                    android:id="@+id/song_duration"
                    android:text="@string/_00_00"
                    style="@style/DurationText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/top_layout"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/home_icon"
            android:src="@drawable/ic_home"
            style="@style/NavigationIcon"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <ImageView
            android:id="@+id/setting_icon"
            android:src="@drawable/ic_settings"
            style="@style/NavigationIcon"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
